fixed modal z-index

--- a/mod-picker/app/assets/stylesheets/general/modals.scss
+++ b/mod-picker/app/assets/stylesheets/general/modals.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
-  z-index: 3;
+  z-index: 200;
   background-color: rgba($shadow_color, 0.4);
 
   .modal {
